	Changed: Process affinity and priority adjusts now include a short text about failure to modify them.
	Added: `Persistent watchlist statistics` option in [Performance] section. Disabling it causes Watchlist.Statistics.ini no longer accessed.
	Changed: Some timestamp calculation changes, should have no end-user visible effects.
### 2018-05-18
	Changed: Refactored a lot of internal code, should have no impact for end-users.
	Fixed: Health monitor was not functional, now it is.
	Fixed: Paging had potential for leaking paging to where it wasn't supposed to happen. Still can, but it's lessened.
	Added: Affinity strategy can now be edited in the UI.
### 2018-05-17
	Added: Option to run with task scheduler on login instead of using the age old regrun method. Allows starting up automatically as admin.
	Fixed: Hopefully fixed some crashes related to WinForms? Maybe? Please?
### 2018-05-16
	Changed: `Increase` and `Decrease` options in `Watchlist.ini` are now `Priority strategy` with values from 0 to 3.
		0 = Ignore/Unset, 1 = Increase only, 2 = Decrease only, 3 = Force/bidirectional
		Upgrading to new settings should happen automatically for now.
	Added: Foreground app hang detector.
	Changed: Resize&reposition uses `Resize strategy` option instead of `Remember size` and `Remember position`.
		0 = None, 1 = Size, 2 = Position, 3 = Both
		Upgrading to new settings should happen automatically for now.
	Fixed: Resize & reposition settings should no longer reset to 0 under certain circumstances.
	Fixed: Uncaught error in app hang detector.
### 2018-05-15
	Fixed: Crash in watchlist rule editor if the affinity checkboxes were used.
	Changed: Internal restructuring, removed PostSharp usage due to its interfererence with build process. Should have no effect for end users.
### 2018-05-13
	Changed: Remember window sizes and positions works a little differently.
	Added: More debug output